Revise Privacy Policy with new sections and formatting
Updated the Privacy Policy to include additional sections on data deletion, changes to the policy, and contact information.

--- a/privacy.html
+++ b/privacy.html
@@ -1,21 +1,72 @@
-Privacy Policy for [Livesoon-Timer]
-Last Updated: [14/11/2025]
-This Privacy Policy explains how [Livesoon-Timer] "we" collects, uses, and discloses your information.
-1. Information We Collect
-When you authorize our App, we collect the following information from TikTok:
-TikTok User ID: We use this to identify your account and associate it with your timer settings.
-TikTok Access Token: We collect and securely store this "key" to make API calls on your behalf. Its only use is to send your pre-defined chat notification (using the live.chat.send permission) when your timer ends.
-We DO NOT collect or store your TikTok password, email address, follower lists, or any other personal information.
-2. How We Use Your Information
-Your information is used only for the following purposes:
-To provide the core service of the App.
-To securely send your one-time chat notification to your own LIVE stream at your request.
-To save your settings (like themes and custom text) for your next stream.
-3. How We Store and Protect Your Information
-Your TikTok User ID and Access Token are stored securely in an encrypted database. We use industry-standard security measures to prevent unauthorized access.
-4. Information Sharing
-We DO NOT and will NEVER share, sell, rent, or trade your information with any third parties for marketing or any other purpose.
-The only time your information is used is for the direct, server-to-server communication with the TikTok API to post your message.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy - Livesoon Timer</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.7; padding: 20px; max-width: 800px; margin: auto; background: #f9f9f9; color: #333; }
+    h1, h2 { color: #1a1a1a; }
+    a { color: #0066cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    ul { padding-left: 20px; }
+    .container { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
+    .last-updated { font-size: 0.9em; color: #666; margin-top: 40px; text-align: center; }
+    header { text-align: center; margin-bottom: 30px; }
+  </style>
+</head>
+<body>
+
+<div class="container">
+  <header>
+    <h1>Privacy Policy</h1>
+    <p><strong>Livesoon Timer</strong></p>
+    <p><strong>Last Updated: November 14, 2025</strong></p>
+  </header>
+
+  <p>This Privacy Policy explains how <strong>Livesoon Timer</strong> (“we,” “us,” or “our”) collects, uses, and discloses your information when you use our mobile application.</p>
+
+  <h2>1. Information We Collect</h2>
+  <p>When you authorize our app, we collect the following information from TikTok:</p>
+  <ul>
+    <li><strong>TikTok User ID</strong>: We use this to identify your account and associate it with your timer settings.</li>
+    <li><strong>TikTok Access Token</strong>: We collect and securely store this “key” to make API calls on your behalf. Its only use is to send your pre-defined chat notification (using the <code>live.chat.send</code> permission) when your timer ends.</li>
+  </ul>
+  <p><strong>We DO NOT collect or store</strong> your TikTok password, email address, follower lists, or any other personal information.</p>
+
+  <h2>2. How We Use Your Information</h2>
+  <p>Your information is used <strong>only</strong> for the following purposes:</p>
+  <ul>
+    <li>To provide the core service of the app.</li>
+    <li>To securely send your one-time chat notification to your own LIVE stream at your request.</li>
+    <li>To save your settings (like themes and custom text) for your next stream.</li>
+  </ul>
+
+  <h2>3. How We Store and Protect Your Information</h2>
+  <p>Your TikTok User ID and Access Token are stored securely in an encrypted database. We use industry-standard security measures to prevent unauthorized access.</p>
+
+  <h2>4. Information Sharing</h2>
+  <p>We <strong>DO NOT</strong> and will <strong>NEVER</strong> share, sell, rent, or trade your information with any third parties for marketing or any other purpose.</p>
+  <p>The only time your information is used is for the direct, server-to-server communication with the TikTok API to post your message.</p>
+
+  <h2>5. Data Deletion</h2>
+  <p>You can revoke the app’s permissions at any time via your TikTok account settings. If you wish for your data (User ID and Access Token) to be permanently deleted from our database, please contact us at <a href="mailto:abdellisoufiane@gmail.com">abdellisoufiane@gmail.com</a>, and we will process your request promptly.</p>
+
+  <h2>6. Changes to This Policy</h2>
+  <p>We may update this policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
+
+  <h2>7. Contact</h2>
+  <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+  <p>
+    <strong>Email</strong>: <a href="mailto:abdellisoufiane@gmail.com">abdellisoufiane@gmail.com</a><br>
+    <strong>Country</strong>: Algeria (DZ)
+  </p>
+
+  <p class="last-updated">Last updated: November 14, 2025</p>
+</div>
+
+</body>
+</html> server-to-server communication with the TikTok API to post your message.
 5. Data Deletion
 You can revoke the App's permissions at any time via your TikTok account settings. If you wish for your data (User ID and Access Token) to be permanently deleted from our database, please contact us at [Your Support Email Address], and we will process your request.
 6. Changes to This Policy
