--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="tiktok-developers-site-verification=KdRE1upEYk1qRLpXvsIylpNasFVtDewF"/>
   <title>Livesoon Timer - Legal</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f4f4f4; color: #333; }
