--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- TikTok Verification Tag (Fixed) -->
-  <meta name="tiktok-developers-site-verification" content="KdRE1upEYk1qRLpXvsIylpNasFVtDewF" />
+  <!-- TikTok Verification Tag (Updated Token) -->
+  <meta name="tiktok-developers-site-verification" content="urBxE32AqZOwScpTLGxfCTxX4bfKqDwo" />
   <title>Livesoon Timer - Legal</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f4f4f4; color: #333; }
