--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- TikTok Verification Tag (Updated & Matched with privacy.html) -->
- <meta name="tiktok-developers-site-verification" content="DCt26WkjhNh5ddxHZ3jSJ1wehdamRMjB" />
-  <title>Livesoon Timer - Legal</title>
+  
+  <!-- 
+    THIS IS THE TIKTOK VERIFICATION SCRIPT (TAG):
+    It must be inside the <head> section.
+  -->
+  <meta name="tiktok-developers-site-verification" content="DCt26WkjhNh5ddxHZ3jSJ1wehdamRMjB" />
+  
+  <title>Livesoon Timer - Home</title>
+  
   <style>
+    /* Your styles for the main page */
     body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f4f4f4; color: #333; }
     .container { max-width: 600px; margin: auto; background: white; padding: 40px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
     a { display: inline-block; margin: 15px; padding: 12px 25px; background: #0066cc; color: white; text-decoration: none; border-radius: 6px; font-weight: bold; }
@@ -15,11 +22,19 @@
   </style>
 </head>
 <body>
+  
   <div class="container">
-    <h1>Livesoon Timer</h1>
-    <p><strong>Legal Documents</strong></p>
+    <h1>Welcome to Livesoon Timer</h1>
+    <p>This is the main page for the Livesoon Timer application.</p>
+    
+    <!-- Links to your other pages -->
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Service</a>
   </div>
+
 </body>
 </html>
+
+
+
+
