--- a/privacy.html
+++ b/privacy.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- TikTok Verification Tag (Updated & Fixed) -->
   <meta name="tiktok-developers-site-verification" content="DCt26WkjhNh5ddxHZ3jSJ1wehdamRMjB" />
